<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SensorWrite</string>
    <string name="action_settings">Settings</string>
    <string name="lblX">X = </string>
    <string name="lblY">Y = </string>
    <string name="lblZ">Z = </string>
    <string name="action_storage">Storage</string>
    <string name="btnSave">Save</string>
    <string name="btnDiscard">Discard</string>
    <string name="user">trainingdata</string>
    <string name="action_edit">Write</string>
    <string name="action_picture">Graphs</string>

</resources>
